<resources>
    <!--Lab 1-->
    <string name="app_name">Android Labs</string>
    <string name="text_view">Look at my GUI</string>
    <string name="button_text">CLICK HERE</string>
    <string name="checkbox_text">Check this out!</string>
    <string name="switch_text">Switch on/off</string>
    <string name="edit_text">Type here</string>
    <string name="image_description">Flag Canada</string>

    <!--Login Page-->
    <string name="textView1">Enter your email address:</string>
    <string name="editText1">Type email here</string>
    <string name="textView2">Type your password:</string>
    <string name="button1">Login</string>

    <!--Profile Page-->
    <string name="textView3">Your profile</string>
    <string name="textView4">your name:</string>
    <string name="editText2">Enter your name</string>
    <string name="textView5">your email</string>
    <string name="editText3">Enter your email</string>
    <string name="textView6">Your picture:</string>
    <string name="textView7">click the button above to take picture</string>
    <string name="button7">Weather Forecast</string>

    <!--chat room layout-->
    <string name="button4">Go to chat</string>
    <string name="button5">Send</string>
    <string name="editText4">Type here</string>
    <string name="button6">Receive</string>

    <!--Weather Forecast Layout-->

    <string name="temperature">Current Temperature: </string>
    <string name="min">Lowest: </string>
    <string name="max">Highest: </string>
    <string name="uvRating">UV Rating: </string>
    <string name="refreshButton">Click To Refresh</string>
    <string name="toolBarPagebtn" translatable="false">Go To Toolbar Page</string>
</resources>
