<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >


    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min" />

    <TextView
        android:id="@+id/max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max" />

    <TextView
        android:id="@+id/uvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uvRating"/>

    <ProgressBar
        android:progressDrawable="@drawable/layout"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/refreshButton"/>


</LinearLayout>
