<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view"
        android:textSize="30dp"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:text="@string/button_text" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="202dp"
        android:layout_height="45dp"
        android:layout_below="@id/textView3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="1dp"
        android:layout_toRightOf="@id/button2"
        android:text="@string/checkbox_text" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox3"
        android:layout_alignParentRight="true"
        android:text="@string/switch_text" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_text"
        android:layout_below="@id/imageButton3"/>

</RelativeLayout>
