<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/text_view"
        android:textSize="30dp"
        android:layout_gravity="fill_horizontal"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/button_text" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/checkbox_text"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch3"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/switch_text" />

    <EditText
        android:id="@+id/editText"
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_text"
        android:layout_gravity="fill_horizontal"/>

</GridLayout>
