<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--row 1-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/text_view" />
    </LinearLayout>
<!--row 2-->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="fill"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:text="@string/button_text" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_text" />

    </LinearLayout>
    <!--row 3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/flag" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:text="@string/switch_text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:inputType="textPersonName"/>
    </LinearLayout>



</LinearLayout>
